# satellite-satellite-near-coincidence-solver

./: .gitignore  README.md  environment.yml  package-list.txt  pyproject.toml
satellite-satellite-near-coincidence-solver/: load_tle.py
ssncs/: load_tle.py  multi_tle.py  path_segment.py  ring.py  solve_near_coincidences.py  trajectory.py
tests/: load_from_omm_json.ipynb  multi_tle.ipynb
