[project]
name="ssncs"
description = "Python package for identifying near-coincidences between satellite ground tracks based on TLE propogation"
authors = [{name="Andrew Martin"}]
readme="README.md"
#license = "placeholder" # placeholder
requires-python = ">=3.10" # placeholder
dependencies = [] # placeholder
dynamic=["version"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["ssncs"]
